[gd_scene load_steps=6 format=3 uid="uid://bjy2vsol6ka6h"]

[ext_resource type="Script" path="res://SelectLevelMenu/select_level_menu.gd" id="1_lou2x"]

[sub_resource type="SystemFont" id="SystemFont_uggty"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_u2cxs"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_gxc06"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_2d7xc"]
font_names = PackedStringArray("Impact")

[node name="Select_Level_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lou2x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0588235, 0.411765, 0.631373, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_uggty")
theme_override_font_sizes/font_size = 48
text = "Select Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 85
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level1_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_u2cxs")
theme_override_font_sizes/font_size = 35
text = "Level 1"

[node name="Level2_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_gxc06")
theme_override_font_sizes/font_size = 35
text = "Level 2"

[node name="Select_Menu_Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = SubResource("SystemFont_2d7xc")
theme_override_font_sizes/font_size = 30
text = "Exit"
